Собирает данные по станциям из json и csv и выводит в ноые json. Всё работает как надо. Думаю надо приделать if для выбора источника: локальный сайт или онлайн. Заморочиться и сделать хорошее логирование.